--- a/index.html
+++ b/index.html
@@ -6,8 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Toboolist</title>
     <link rel="stylesheet" href="css/style.css">
+    <!-- Font -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!--Header -->
+    <header>
+        <img src="img/logo.png" alt="logo boolean">
+        <h1>Toboolist</h1>
+    </header>
+    <!-- Fine Header -->
     
 </body>
 </html>
