--- a/index.html
+++ b/index.html
@@ -18,6 +18,26 @@
         <h1>Toboolist</h1>
     </header>
     <!-- Fine Header -->
+
+    <!-- Main -->
+    <main>
+        <!-- Container -->
+        <div class="container">
+
+            <!-- Link Section -->
+            <section class="links">
+                <a class="add-task" href="#">Add Task</a>
+                <a class="add-section" href="#">Add Section</a>
+            </section>
+            <!-- Fine Link Section -->
+
+            <hr />
+
+        </div>
+        <!-- Fine Container -->
+
+    </main>
+    <!-- Fine Main -->
     
 </body>
 </html>
