Elementi lista di primo livello

--- a/index.html
+++ b/index.html
@@ -33,6 +33,21 @@
 
             <hr />
 
+            <!-- To-Do Section-->
+            <section class="to-do">
+                <ul>
+                    <li>
+                        <span class="arrow">&#9662; </span> <h3>New Task</h3>
+                        <ul>
+                            <li>Quarterly Newsletter</li>
+                        </ul>
+                    </li>
+                    <li><span class="arrow">&#9662; </span> <h3>Today</h3></li>
+                    <li><span class="arrow">&#9662; </span> <h3>Upcoming</h3></li>
+                </ul>
+            </section>
+            <!--  Fine To-Do Section-->
+
         </div>
         <!-- Fine Container -->
 
