liste elementi di secondo livello

--- a/index.html
+++ b/index.html
@@ -36,14 +36,30 @@
             <!-- To-Do Section-->
             <section class="to-do">
                 <ul>
-                    <li>
+                    <li class="primo-livello">
                         <span class="arrow">&#9662; </span> <h3>New Task</h3>
                         <ul>
-                            <li>Quarterly Newsletter</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Quarterly Newsletter</li>
                         </ul>
                     </li>
-                    <li><span class="arrow">&#9662; </span> <h3>Today</h3></li>
-                    <li><span class="arrow">&#9662; </span> <h3>Upcoming</h3></li>
+                    <li class="primo-livello">
+                        <span class="arrow">&#9662; </span> <h3>Today</h3>
+                        <ul>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Recruiting blog post</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Mobile App launch</li>
+                            <li class="secondo-livello"><span class="cross">&#9587; </span>Interview John H.</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Summit update to mobile storefronts</li>
+                        </ul>
+                    </li>
+                    <li class="primo-livello">
+                        <span class="arrow">&#9662; </span> <h3>Upcoming</h3>
+                        <ul>
+                            <li class="secondo-livello"><span class="cross">&#9587; </span>Schedule meeting with Alex</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Homepage refresh</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Onboard new Sales team members</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Review editorial calendar</li>
+                        </ul>
+                    </li>
                 </ul>
             </section>
             <!--  Fine To-Do Section-->
