--- a/index.html
+++ b/index.html
@@ -39,25 +39,25 @@
                     <li class="primo-livello">
                         <span class="arrow">&#9662; </span> <h3>New Task</h3>
                         <ul>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Quarterly Newsletter</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Quarterly Newsletter <span class="card editorial">Editorial</span></li>
                         </ul>
                     </li>
                     <li class="primo-livello">
                         <span class="arrow">&#9662; </span> <h3>Today</h3>
                         <ul>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Recruiting blog post</li>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Mobile App launch</li>
-                            <li class="secondo-livello"><span class="cross">&#9587; </span>Interview John H.</li>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Summit update to mobile storefronts</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Recruiting blog post <span class="card editorial">Editorial</span></li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Mobile App launch <span class="card goals">Q1 Goals</span></li>
+                            <li class="secondo-livello"><span class="cross">&#9587; </span>Interview John H. <span class="card recruiting">Recruiting</span></li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Summit update to mobile storefronts <span class="card mobile">Mobile</span></li>
                         </ul>
                     </li>
                     <li class="primo-livello">
                         <span class="arrow">&#9662; </span> <h3>Upcoming</h3>
                         <ul>
                             <li class="secondo-livello"><span class="cross">&#9587; </span>Schedule meeting with Alex</li>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Homepage refresh</li>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Onboard new Sales team members</li>
-                            <li class="secondo-livello"><span class="check">&#10003; </span>Review editorial calendar</li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Homepage refresh <span class="card website">Website</span></li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Onboard new Sales team members <span class="card sales">Sales</span></li>
+                            <li class="secondo-livello"><span class="check">&#10003; </span>Review editorial calendar <span class="card editorial">Editorial</span></li>
                         </ul>
                     </li>
                 </ul>
